Humanizer update and News Update

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -1,9 +1,32 @@
-﻿@{
+@{
     ViewData["Title"] = "SailScores News";
     ViewData["MetaDescription"] = "Latest news about SailScores";
 }
 <div class="col-lg-9">
     <h1 class="h3"><span class="far fa-newspaper"></span>News</h1>
+    <h3>
+        October 16th, 2023
+    </h3>
+    <h5>&#128123;</h5>
+    <p>
+        Today we released some new features:
+        <ul>
+            <li>Regattas may have documents added, shown right below the notices section. 
+                <em>Depending on use and cost, this feature may only be included with a
+                    subscription fee in the future.</em></li>
+            <li>Clubs can select a localization setting which will alter date and some
+                fixed text. <em>This is an experimental feature.</em> Languages other than English
+                    may have incomplete translations. Additional languages will be
+                    added in the future if interest warrants.</li>
+            </li>
+            <li>Various bug fixes, particularly around regatta views.</li>
+        </ul>
+    </p>
+    <p>
+        This winter we expect to add a few more features for regattas, such as simpler regatta
+        creation and division scoring within regatta fleets.
+    </p>
+    <br />
 <h3>
     October 21st, 2021
 </h3>
