--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -32,7 +32,7 @@
         <h5 class="d-none d-md-inline">
             @Model.Item.StartDate?.ToString("D")
             @if (Model.Item.StartDate != Model.Item.EndDate) {
-                @:- @Model.Item.EndDate?.ToString("D"))
+                @:- @Model.Item.EndDate?.ToString("D")
             }
             <br />
             <br />
@@ -43,7 +43,6 @@
                 @:- @Model.Item.EndDate?.ToString("d")
             }
         </span>
-
     </div>
     <div class="col-12">
         @if (!String.IsNullOrWhiteSpace(Model.Item.Description))
