Added competitor utilities

--- a/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
+++ b/SailScores.Web/Views/Competitor/CreateMultiple.cshtml
@@ -223,7 +223,7 @@
                 <input type="submit" value="Create" class="btn btn-primary btn-block my-2" />
             </div>
             <div class="col-md-3">
-                <a href="@(ViewData["ReturnUrl"] ?? Url.Action("Index", "Admin"))"
+                <a href="@(ViewData["ReturnUrl"] ?? Url.Action("Index", "Competitor"))"
                    class="btn btn-outline-primary btn-block my-2">Cancel</a>
             </div>
         </div>
