--- a/SailScores.Web/Views/Competitor/Delete.cshtml
+++ b/SailScores.Web/Views/Competitor/Delete.cshtml
@@ -46,7 +46,7 @@
         <input type="hidden" asp-for="Id" />
         <input type="hidden" asp-for="ClubId" />
         <input type="submit" value="Delete" class="btn btn-danger" />
-        <a asp-controller="Competitors"
+        <a asp-controller="Competitor"
            asp-action="Index"
            class="btn btn-outline-primary">Cancel</a>
     </form>
