--- a/SailScores.Web/Views/MergeCompetitor/SelectTarget.cshtml
+++ b/SailScores.Web/Views/MergeCompetitor/SelectTarget.cshtml
@@ -41,7 +41,7 @@
 
             <div class="form-group">
                 <input type="submit" value="Choose Other Competitor" class="btn btn-primary my-2" />
-                <a asp-controller="Admin"
+                <a asp-controller="Competitor"
                    asp-action="Index"
                    class="btn btn-outline-primary">Cancel</a>
             </div>
