--- a/SailScores.Web/Views/Competitor/Create.cshtml
+++ b/SailScores.Web/Views/Competitor/Create.cshtml
@@ -97,9 +97,8 @@
 
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary my-2" />
-                <a asp-controller="Admin"
+                <a asp-controller="Competitor"
                    asp-action="Index"
-                   asp-fragment="competitors"
                    class="btn btn-outline-primary">Cancel</a>
             </div>
         </form>
