--- a/SailScores.Web/Views/MergeCompetitor/SelectSource.cshtml
+++ b/SailScores.Web/Views/MergeCompetitor/SelectSource.cshtml
@@ -43,7 +43,7 @@
 
             <div class="form-group">
                 <input type="submit" value="Confirm Merge" class="btn btn-primary my-2" />
-                <a asp-controller="Admin"
+                <a asp-controller="Competitor"
                    asp-action="Index"
                    class="btn btn-outline-primary">Cancel</a>
             </div>
