--- a/SailScores.Web/Views/MergeCompetitor/Verify.cshtml
+++ b/SailScores.Web/Views/MergeCompetitor/Verify.cshtml
@@ -74,7 +74,7 @@
 
                 <div class="form-group">
                     <input type="submit" value="Merge" class="btn btn-primary my-2" />
-                    <a asp-controller="Admin"
+                    <a asp-controller="Competitor"
                        asp-action="Index"
                        class="btn btn-outline-primary">Cancel</a>
                 </div>
