--- a/SailScores.Web/Views/Race/Details.cshtml
+++ b/SailScores.Web/Views/Race/Details.cshtml
@@ -1,4 +1,4 @@
-﻿@using SailScores.Web.Models.SailScores;
+@using SailScores.Web.Models.SailScores;
 @using SailScores.Web.Services.Interfaces
 @model ClubItemViewModel<RaceViewModel>
 @inject IWeatherService  weatherService
@@ -57,6 +57,8 @@
             }
         </div>
     </div>
+        @if(Model.Item.Regatta == null)
+        {
     <ul>
         @foreach (var series in @Model.Item.Series)
         {
@@ -67,6 +69,7 @@
             </li>
         }
     </ul>
+                }
     @if (Model.Item.State == SailScores.Api.Enumerations.RaceState.Preliminary)
     {
         <p class="text-warning"><strong>Preliminary Results</strong></p>
