Fleet Creation help improvements

--- a/SailScores.Web/Views/Fleet/Create.cshtml
+++ b/SailScores.Web/Views/Fleet/Create.cshtml
@@ -17,30 +17,36 @@
             <input type="hidden" id="regattaId" asp-for="RegattaId" />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="ShortName" class="control-label"></label>
-                <a class="text-primary"
-                   data-container="body"
-                   data-toggle="popover"
-                   data-placement="top"
-                   data-trigger="focus hover"
-                   data-content="Used to create URLs; avoid spaces. Should be unique in the club, e.g. 2019DieHardMCs">
-                    <span class="far fa-question-circle"></span>
-                </a>
-                <input asp-for="ShortName" class="form-control" />
-                <span asp-validation-for="ShortName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
                 <a class="text-primary"
                    data-container="body"
                    data-toggle="popover"
                    data-placement="top"
                    data-trigger="focus hover"
-                   data-content="Full name including spaces such as: 2019 Die Hard MC Scows">
+                   data-content="Full name including spaces such as: '2024 Die Hard MC Scows'">
                     <span class="far fa-question-circle"></span>
                 </a>
+                @if (Model.SuggestedFullName != null)
+                {
+                    <p>
+                        <small>Suggested Name: @Model.SuggestedFullName</small>
+                    </p>
+                }
                 <input asp-for="Name" class="form-control" />
                 <span asp-validation-for="Name" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="ShortName" class="control-label"></label>
+                <a class="text-primary"
+                   data-container="body"
+                   data-toggle="popover"
+                   data-placement="top"
+                   data-trigger="focus hover"
+                   data-content="Used to create links; avoid spaces. Should be unique in the club, e.g. 2024DieHardMCs">
+                    <span class="far fa-question-circle"></span>
+                </a>
+                <input asp-for="ShortName" class="form-control" />
+                <span asp-validation-for="ShortName" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="NickName" class="control-label"></label>
@@ -70,7 +76,7 @@
                 <label asp-for="FleetType" class="control-label"></label>
                 <select id="fleetType" asp-for="FleetType" class="form-control"
                         asp-items="(Html.GetEnumSelectList<SailScores.Api.Enumerations.FleetType>())"
-                        onchange="checkVisibility()">
+                        onChange="checkFleetOptionVisibility()">
                     <option selected="selected" value="">Select the type of Fleet</option>
                 </select>
                 <span asp-validation-for="FleetType" class="text-danger"></span>
@@ -125,7 +131,7 @@
 
 @section Scripts {
     <script type="text/javascript">
-        function checkVisibility() {
+        function checkFleetOptionVisibility() {
             var f = document.getElementById('fleetType');
             var fType = f.options[f.selectedIndex].text;
             if (fType.indexOf('Class') > -1) {
@@ -141,7 +147,7 @@
                 document.getElementById('compCreateGroup').style.display = 'none';
             }
         };
-        checkVisibility();
+        checkFleetOptionVisibility();
         
     </script>
     
