--- a/SailScores.Web/Views/Shared/_ClubLayout.cshtml
+++ b/SailScores.Web/Views/Shared/_ClubLayout.cshtml
@@ -6,11 +6,7 @@
 @inject IStringLocalizer<SharedResource> localizer
 
 @{
-    var wideLayout = false;
-    if (((bool?)ViewData["WideLayout"]) ?? false)
-    {
-        wideLayout = true;
-    }
+    bool wideLayout = ((bool?)ViewData["WideLayout"]) ?? false;
 }
 <!DOCTYPE html>
 <html lang="@CultureInfo.CurrentCulture.TwoLetterISOLanguageName">
@@ -40,8 +36,20 @@
     @inject Microsoft.AspNetCore.Http.IHttpContextAccessor HttpContextAccessor
     @inject AppSettingsService SettingsService
     <base href="@settingsService.GetPreferredUri(HttpContextAccessor.HttpContext.Request)" />
-    <link rel="canonical" href="@settingsService.GetPreferredUri(HttpContextAccessor.HttpContext.Request)" />
-
+    @{ var thisPageUri = settingsService.GetPreferredUri(HttpContextAccessor.HttpContext.Request); }
+    <link rel="canonical" href="@thisPageUri" />
+    
+    @if (!String.IsNullOrWhiteSpace((string)ViewData["ogTitle"])
+        && !String.IsNullOrWhiteSpace((String)ViewData["ogDescription"]))
+    {
+        
+        <meta property="og:url" content="@thisPageUri"/>
+        <meta property="og:type" content="website"/>
+        <meta property="og:title" content="@ViewData["ogTitle"]"/>
+        <meta property="og:description" content="@ViewData["ogDescription"]"/>
+        <meta property="og:site_name" content="SailScores"/>
+        <meta property="og:site" content="https://www.sailscores.com"
+    }
 
     <title>@ViewData["Title"]</title>
     @if (!String.IsNullOrWhiteSpace((String)ViewData["MetaDescription"]))
@@ -72,107 +80,107 @@
     }
 </head>
 <body>
-    <header class="bg-dark">
-        @if (!wideLayout)
-        {
-            @Html.Raw("<div class=\"container-sm py-0\">");
-        }
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark @(wideLayout? "py-0" : "p-0")">
-            <a asp-area="" asp-controller="Club" asp-action="Index"
-               asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
-               class="navbar-brand">@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()</a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav mr-auto">
-                    <li class="nav-item">
-                        <a asp-area=""
-                           asp-controller="Series"
-                           asp-action="Index"
-                           asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
-                           class="nav-link">
-                            @localizer["Series"]
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-area=""
-                           asp-controller="Race"
-                           asp-action="Index"
-                           asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
-                           class="nav-link">
-                            @localizer["Races"]
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a asp-area=""
-                           asp-controller="Regatta"
-                           asp-action="Index"
-                           asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
-                           class="nav-link">
-                            @localizer["Regattas"]
-                        </a>
-                    </li>
-                </ul>
-                <ul class="navbar-nav navbar-right">
-                    <li class="nav-item"><a href="~/" class="nav-link navbar-brand">SailScores</a></li>
-                </ul>
-            </div>
-        </nav>
-        @if (!wideLayout)
-        {
-            @Html.Raw("</div>");
-        }
-    </header>
-
-    <div class=" @(wideLayout? "container-fluid" : "container") body-content">
-        <div class="row">
-            @if (IsSectionDefined("Sidebar"))
-            {
-                @RenderSection("Sidebar")
-                <main class="col-md-10 ml-sm-auto px-4" role="main">
-                    @RenderBody()
-                </main>
-            }
-            else
-            {
-                <main class="col-12 py-md-3 @(IsSectionDefined("Sidebar")?"pl-md-5" :"") bd-content" role="main">
-                    @RenderBody()
-                </main>
-            }
-        </div>
-
-        <hr />
-
-        <footer>
-            <div class="row">
-                <div class="col-12 text-sm-right">
-                    @await Html.PartialAsync("_LoginPartial")
-                </div>
-            </div>
-        </footer>
-    </div>
-    @if (IsSectionDefined("PreFooter"))
+<header class="bg-dark">
+    @if (!wideLayout)
     {
-        @RenderSection("PreFooter")
+        @Html.Raw("<div class=\"container-sm py-0\">");
     }
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark @(wideLayout? "py-0" : "p-0")">
+        <a asp-area="" asp-controller="Club" asp-action="Index"
+           asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
+           class="navbar-brand">@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
 
-    <environment include="Development">
-        <script src="~/vendor/jquery/jquery.js"></script>
-        <script src="~/vendor/popper.js/umd/popper.js"></script>
-        <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
-        <script src="~/lib/jquery.unobtrusive-ajax.min.js" asp-append-version="true"></script>
-    </environment>
-    <environment exclude="Development">
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha256-/ijcOLwFf26xEYAjW75FizKVo5tnTYiQddPZoLUHHZ8=" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.18/dist/js/bootstrap-select.min.js" integrity="sha256-qo0Cam4XJ0QQ06XnCiCFYBh3GDXU45j3lpUp+em2yBU=" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/jquery-ajax-unobtrusive@3.2.6/dist/jquery.unobtrusive-ajax.min.js" integrity="sha256-PAC000yuHt78nszJ2RO0OiDMu/uLzPLRlYTk8J3AO10=" crossorigin="anonymous"></script>
-    </environment>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a asp-area=""
+                       asp-controller="Series"
+                       asp-action="Index"
+                       asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
+                       class="nav-link">
+                        @localizer["Series"]
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-area=""
+                       asp-controller="Race"
+                       asp-action="Index"
+                       asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
+                       class="nav-link">
+                        @localizer["Races"]
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a asp-area=""
+                       asp-controller="Regatta"
+                       asp-action="Index"
+                       asp-route-clubInitials="@Context.GetRouteData().Values["ClubInitials"].ToString().ToUpperInvariant()"
+                       class="nav-link">
+                        @localizer["Regattas"]
+                    </a>
+                </li>
+            </ul>
+            <ul class="navbar-nav navbar-right">
+                <li class="nav-item"><a href="~/" class="nav-link navbar-brand">SailScores</a></li>
+            </ul>
+        </div>
+    </nav>
+    @if (!wideLayout)
+    {
+        @Html.Raw("</div>");
+    }
+</header>
 
-    <script type="text/javascript">
+<div class=" @(wideLayout? "container-fluid" : "container") body-content">
+    <div class="row">
+        @if (IsSectionDefined("Sidebar"))
+        {
+            @RenderSection("Sidebar")
+            <main class="col-md-10 ml-sm-auto px-4" role="main">
+                @RenderBody()
+            </main>
+        }
+        else
+        {
+            <main class="col-12 py-md-3 @(IsSectionDefined("Sidebar")?"pl-md-5" :"") bd-content" role="main">
+                @RenderBody()
+            </main>
+        }
+    </div>
+
+    <hr />
+
+    <footer>
+        <div class="row">
+            <div class="col-12 text-sm-right">
+                @await Html.PartialAsync("_LoginPartial")
+            </div>
+        </div>
+    </footer>
+</div>
+@if (IsSectionDefined("PreFooter"))
+{
+    @RenderSection("PreFooter")
+}
+
+<environment include="Development">
+    <script src="~/vendor/jquery/jquery.js"></script>
+    <script src="~/vendor/popper.js/umd/popper.js"></script>
+    <script src="~/vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="~/lib/jquery.unobtrusive-ajax.min.js" asp-append-version="true"></script>
+</environment>
+<environment exclude="Development">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha256-/ijcOLwFf26xEYAjW75FizKVo5tnTYiQddPZoLUHHZ8=" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.13.18/dist/js/bootstrap-select.min.js" integrity="sha256-qo0Cam4XJ0QQ06XnCiCFYBh3GDXU45j3lpUp+em2yBU=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/jquery-ajax-unobtrusive@3.2.6/dist/jquery.unobtrusive-ajax.min.js" integrity="sha256-PAC000yuHt78nszJ2RO0OiDMu/uLzPLRlYTk8J3AO10=" crossorigin="anonymous"></script>
+</environment>
+
+<script type="text/javascript">
         /* First CSS File */
         var deferredStyleOne = document.createElement('link');
         deferredStyleOne.rel = 'stylesheet';
@@ -198,9 +206,9 @@
         godefer2.parentNode.insertBefore(deferredStyleThree, godefer2);
     </script>
 
-    @RenderSection("Scripts", required: false)
+@RenderSection("Scripts", required: false)
 
-    <script>
+<script>
 
         $.validator.methods.range = function (value, element, param) {
             var globalizedValue = value.replace(",", ".");
