--- a/SailScores.Web/Views/Shared/_ClubLayout.cshtml
+++ b/SailScores.Web/Views/Shared/_ClubLayout.cshtml
@@ -48,7 +48,7 @@
         <meta property="og:title" content="@ViewData["ogTitle"]"/>
         <meta property="og:description" content="@ViewData["ogDescription"]"/>
         <meta property="og:site_name" content="SailScores"/>
-        <meta property="og:site" content="https://www.sailscores.com"
+        <meta property="og:site" content="https://www.sailscores.com"/>
     }
 
     <title>@ViewData["Title"]</title>
