--- a/SailScores.Web/Views/Competitor/Details.cshtml
+++ b/SailScores.Web/Views/Competitor/Details.cshtml
@@ -40,10 +40,10 @@
             @if (SeasonStats.DaysRaced > 2)
             {
                 @:Average place: @(SeasonStats.AverageFinishRank.HasValue ? String.Format("{0:0.0}", SeasonStats.AverageFinishRank) : "No")&emsp;
-                @:Raced against @SeasonStats.BoatsRacedAgainst boats
+                @:Raced against @SeasonStats.BoatsRacedAgainst others
                 @if (SeasonStats.BoatsBeat.HasValue && ((SeasonStats.BoatsBeat * 100m) / SeasonStats.BoatsRacedAgainst) > 25)
                 {
-                    @:and beat @SeasonStats.BoatsBeat boats
+                    @:and beat @SeasonStats.BoatsBeat others
                     @:(@(((SeasonStats.BoatsBeat.Value * 100m) / SeasonStats.BoatsRacedAgainst.Value).ToString("0.0"))%)<br />
                 }
             }
