--- a/SailScores.Web/Views/Shared/_ClubLayout.cshtml
+++ b/SailScores.Web/Views/Shared/_ClubLayout.cshtml
@@ -9,7 +9,8 @@
     bool wideLayout = ((bool?)ViewData["WideLayout"]) ?? false;
 }
 <!DOCTYPE html>
-<html lang="@CultureInfo.CurrentCulture.TwoLetterISOLanguageName">
+<html lang="@CultureInfo.CurrentCulture.TwoLetterISOLanguageName" 
+      prefix="og: https://ogp.me/ns/website#">
 <head>
     <meta charset="utf-8" />
     <meta name="google" content="notranslate" />
