--- a/SailScores.Web/Views/Shared/_ResultsTable.cshtml
+++ b/SailScores.Web/Views/Shared/_ResultsTable.cshtml
@@ -204,7 +204,7 @@
                             @if (results.IsPercentSystem &&
               results.GetScore(comp)?.TotalScore != null)
                             {
-                                <span data-toggle="tooltip" title="@results.GetScore(comp).PointsEarned / @results.GetScore(comp).PointsPossible.Value.ToString("N0")" >
+                                    <span data-toggle="tooltip" title="@results.GetScore(comp).PointsEarned / @results.GetScore(comp).PointsPossible">
                                         @String.Format("{0:0.##}", results.GetScore(comp)?.TotalScore)
                                 </span>
                             } else {
