--- a/SailScores.Web/Views/Shared/_ScoreCell.cshtml
+++ b/SailScores.Web/Views/Shared/_ScoreCell.cshtml
@@ -7,7 +7,11 @@
     <td class="text-center
         @(Model.Result.ScoreValue == 1 && !Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) ? "finish-first ": "")
         @(Model.Result.ScoreValue == 2 && !Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) ? "finish-second " : "")
-        @(Model.Result.ScoreValue == 3 && !Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) ? "finish-third " : "") ">
+        @(Model.Result.ScoreValue == 3 && !Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) ? "finish-third " : "")
+        @(Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) && Model.Result.Place == 1 ? "finish-first" : "")
+        @(Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) && Model.Result.Place == 2 ? "finish-second " : "")
+        @(Model.IsPercentSystem && String.IsNullOrEmpty(Model.Result.Code) && Model.Result.Place == 3 ? "finish-third " : "")
+        ">
         <span class="@(Model.Result.Discard ? "text-muted" : "")">
             @if (Model.Result.Discard)
             {
