--- a/SailScores.Web/Views/Series/Edit.cshtml
+++ b/SailScores.Web/Views/Series/Edit.cshtml
@@ -81,7 +81,7 @@
                                 <span asp-validation-for="TrendOption" class="text-danger"></span>
                             </div>
                             <div class="form-group">
-                                <label asp-for="ScoringSystemId">Default Scoring System</label>
+                                <label asp-for="ScoringSystemId">Scoring System</label>
                                 <select id="ScoringSystemId" asp-for="ScoringSystemId" class="form-control">
                                     @foreach (var scoringSystem in Model.ScoringSystemOptions)
                                     {
