--- a/SailScores.Web/Views/Regatta/Details.cshtml
+++ b/SailScores.Web/Views/Regatta/Details.cshtml
@@ -13,7 +13,7 @@
     ViewBag.Title = $"{Model.Item.Name} Results";
     Layout = "_ClubLayout";
 
-    ViewData["MetaDescription"] = $"{Model.ClubInitials} {Model.Item.Season.Name} {Model.Item.Name} Regatta Results";
+    ViewData["MetaDescription"] = $"{Model.ClubInitials.ToUpper()} {Model.Item.Season.Name} {Model.Item.Name} Regatta Results";
     ViewData["ogTitle"] = ViewData["MetaDescription"];
     ViewData["ogDescription"] = Model.Item.LongDescription;
 }
