--- a/SailScores.Web/Views/Series/Delete.cshtml
+++ b/SailScores.Web/Views/Series/Delete.cshtml
@@ -7,9 +7,9 @@
 
 <h2>Delete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this series?</h3>
 <div>
-    <h4>Series</h4>
+    Races will not be deleted, but this grouping of races will be permanently removed.
     <hr />
     <dl class="dl-horizontal">
         <dt>
