--- a/SailScores.Web/Views/Series/Delete.cshtml
+++ b/SailScores.Web/Views/Series/Delete.cshtml
@@ -9,7 +9,7 @@
 
 <h3>Are you sure you want to delete this series?</h3>
 <div>
-    Races will not be deleted, but this grouping of races will be permanently removed.
+    No races will be deleted, but this grouping of races will be removed.
     <hr />
     <dl class="dl-horizontal">
         <dt>
