Announce Url Forwarding

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -4,9 +4,22 @@
 }
 <div class="col-lg-9">
     <h1 class="h3"><span class="far fa-newspaper"></span>News</h1>
-    <h3>
-        November 5th, 2023
-    </h3>
+    <h3>November 11th, 2023</h3>
+    <p>
+        One feature added: after renaming a series, regatta, or competitor, urls based
+        on the old name will continue to work. Previously, series and regattas had a "urlName"
+        that kept the name of the first save: the url would not necessarily use the current
+        series name.
+    </p><p>
+        This should help with sharing links to the site:
+        urls will forward to the new name. If a replacement item is created with the same
+        name, the forwarding will stop, and the links will go to the new item.
+    </p>
+    <p>
+        Next up is support for Cox-Sprague scoring: a variant of High Point Percentage.
+    </p>
+    <br />
+    <h3>November 5th, 2023</h3>
     <h5>&#129411;</h5>
     <p>
         A bunch of fixes and tweaks released today:
