--- a/SailScores.Web/Views/ScoreCode/Create.cshtml
+++ b/SailScores.Web/Views/ScoreCode/Create.cshtml
@@ -7,7 +7,7 @@
 
 <h2>Create</h2>
 
-<h4>score code</h4>
+<h4>Score Code</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -63,6 +63,12 @@
             <div class="form-check">
                 <input asp-for="AdjustOtherScores" class="form-check-input" />
                 <label asp-for="AdjustOtherScores" class="form-check-label"></label>
+            </div>
+            <hr />
+            <p>For High Point Scoring (including Cox-Sprague)</p>
+            <div class="form-check">
+                <input asp-for="CountAsParticipation" class="form-check-input" />
+                <label asp-for="CountAsParticipation" class="form-check-label"></label>
             </div>
             <br />
             <div class="form-group">
