--- a/SailScores.Web/Views/ScoreCode/Edit.cshtml
+++ b/SailScores.Web/Views/ScoreCode/Edit.cshtml
@@ -65,6 +65,12 @@
                 <input asp-for="AdjustOtherScores" class="form-check-input" />
                 <label asp-for="AdjustOtherScores" class="form-check-label"></label>
             </div>
+            <hr />
+            <p>For High Point Scoring (including Cox-Sprague)</p>
+            <div class="form-check">
+                <input asp-for="CountAsParticipation" class="form-check-input" />
+                <label asp-for="CountAsParticipation" class="form-check-label"></label>
+            </div>
             <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
