Getting close with Cox-Sprague

--- a/SailScores.Web/Views/ScoringSystem/Edit.cshtml
+++ b/SailScores.Web/Views/ScoringSystem/Edit.cshtml
@@ -55,11 +55,12 @@
                     </dd>
                     <dt class="col-sm-3">0,0,1,1,1,2,2,2,3,3,3,4</dt>
                     <dd class="col-sm-9">
-                        One
-                        discard for every three races, up to 12 races. More
+                        One discard for every three races, up to 12 races. More
                         than 12 races will have four discards.
                     </dd>
                 </dl>
+                <p>For High Point Percentage systems, including Cox-Sprague, discards are awarded
+                    for the number of races that an individual competitor has sailed.</p>
             </div>
 
             <div class="form-group">
