News update for publishing

--- a/SailScores.Web/Views/Home/News.cshtml
+++ b/SailScores.Web/Views/Home/News.cshtml
@@ -4,6 +4,43 @@
 }
 <div class="col-lg-9">
     <h1 class="h3"><span class="far fa-newspaper"></span>News</h1>
+    <h3>November 18th, 2023</h3>
+    <h5>Cox-Sprague Scoring</h5>
+    <p>
+        We've added Cox-Sprague scoring as a supported option. In this
+        variant of High Point Percentage scoring, races
+        are weighted according to the number of competitors who came to the starting area,
+        versus basic High Point Percentage, in which every race is given equal weight. A single
+        race with eleven competitors counts as much as two races with four competitors.
+        The difference in weighting stops at a point: races with 20 or more boats all
+        contribute equally to the total.
+    </p><p>
+        Core to SailScores: races can belong to multiple series, even series that are scored
+        differently. With the addition
+        of Cox-Sprague, a long-running champ series based on Cox-Sprague can be compiled
+        easily at the same time as weekend series scored with Appendix A Low Point. The
+        race results need to be entered only once.
+    </p><p>
+        High Point Percentage systems let competitors miss races without the
+        penalty of receiving a low score. A competitor&rsquo;s percentage includes
+        only the races they participated in. Scoring can enforce minimum participation
+        before a competitor is ranked. SailScores
+        allows custom codes that count as participation but are not included in the
+        total score. Use this approach for volunteer non-sailing days, e.g., "RC - Race
+        Committee Duty".
+    </p><p>
+        Since a percentage system, like Cox-Sprague or basic High Point Percentage,
+        doesn't punish missing a race, it doesn't encourage participation like a
+        low point system does. To encourage participation, discards
+        can be added to percentage scoring.
+    </p><p>
+        Cox-Sprague discards can be surprising: with race weighting, discarding the
+        lowest score or lowest percentage does <em>not</em> always improve a Cox-Sprague percentage total more
+        than other potential discards. SailScores calculates the discard that will
+        maximize a competitor's total. This is different from some other scoring
+        calculators, which determine a less optimal discard.
+    </p>
+    <br />
     <h3>November 11th, 2023</h3>
     <p>
         One feature added: after renaming a series, regatta, or competitor, urls based
