Better spec for images

--- a/SailScores.Web/Views/Home/About.cshtml
+++ b/SailScores.Web/Views/Home/About.cshtml
@@ -15,7 +15,8 @@
     <br />
     <h3>It's free</h3>
     <p>
-        You can host your club's scores on this site. Fill out <a asp-controller="ClubRequest" asp-action="index">the form</a>
+        You can host your club's scores on this site. Fill out
+        <a asp-controller="ClubRequest" asp-action="index">the form</a>
         for the initial club setup.
     </p>
     <p>
@@ -31,16 +32,15 @@
         <em>Why is SailScores free? What about "If you're not paying for a service, you are the product."?</em>
     </p>
     <p>
-        The expense to host this site is less than $20 a month.
+        The expense to host this site is less than $50 a month.
         Development time is a more significant contribution but is happily donated:
         score entry troubles are reduced, the growth of sailing is supported and technologies are learned.
     </p>
     <p>
-        Some upcoming features will likely require more resources and payments to other services. When those
-        become available, we may need to pass some of those costs on to users of the "Premium" features.
-    </p>
-    <p>
-        We are committed to always providing a free option. Our clubs haven't had
+        Should storage or other service costs (such as speech
+        recognition) become a larger cost, we may need to pass some
+        costs on to users of the "Premium" features. But we are committed
+        to always providing a free option. Our clubs haven't had
         large budgets and would have benefited from SailScores. We'd like to share.
     </p>
     <p>
@@ -52,11 +52,11 @@
     <h3>Future</h3>
     We're working on new features, including:
     <ul>
-        <li>Coming soon: speech recognition for faster race result entry.</li>
-        <li>Integration with social media, such as automatic posting of results to Twitter.</li>
         <li>Additional analysis for competitors in different conditions.</li>
-        <li>More import and export options to integrate with existing scoring software.</li>
+        <li>Continuing to add more import and export options to integrate with other scoring software.</li>
         <li>Deeper trend reporting for clubs: What's the average wind for your club's races?</li>
+        <li>Support for team racing?</li>
+        <li>Support for offline score entry.</li>
     </ul>
     <p>View a list of issues and feature requests at <a href="https://github.com/SailScores/SailScores/issues">GitHub</a></p>
     <br />
