--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -13,21 +13,21 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <picture class="d-block w-100">
-                        <source srcset="images/TypiqueSeries_343.webp 1x, images/TypiqueSeries.webp"
+                        <source srcset="images/TypiqueSeries_343.webp 1x, images/TypiqueSeries.webp 2x"
                                 type="image/webp" class="d-block w-100">
                         <img src="/images/TypiqueSeries.png" alt="Series results" class="d-block w-100">
                     </picture>
                 </div>
                 <div class="carousel-item">
                     <picture>
-                        <source srcset="images/TypiqueRaceEntry_343.webp 1x, images/TypiqueRaceEntry.webp"
+                        <source srcset="images/TypiqueRaceEntry_343.webp 1x, images/TypiqueRaceEntry.webp 2x"
                                 type="image/webp" class="d-block w-100">
                         <img src="/images/TypiqueRaceEntry.png" alt="Results entry" class="d-block w-100">
                     </picture>
                 </div>
                 <div class="carousel-item">
                     <picture class="d-block w-100">
-                        <source srcset="images/TypiqueMainPage_343.webp 1x, images/TypiqueMainPage.webp"
+                        <source srcset="images/TypiqueMainPage_343.webp 1x, images/TypiqueMainPage.webp 2x"
                                 type="image/webp" class="d-block w-100">
                         <img src="/images/TypiqueMainPage.png" alt="Club main page" class="d-block w-100">
                     </picture>
@@ -59,7 +59,7 @@
             <li>Fast, simple result entry and sharing using the web. Optional speech
                 recognition to make things really easy.</li>
             <li>Support for Appendix A Low Point Scoring including 2021-2024 codes,
-                High Point Percentage, and customized club systems and codes.
+                High Point Percentage, Cox-Sprague, and customized club scoring codes.
             </li>
             <li>Easy to bookmark and link to club, series, and regatta results.</li>
             <li>Competitor statistics across multiple series.</li>
