Fixed offset on button footer

--- a/SailScores.Web/Views/Race/Edit.cshtml
+++ b/SailScores.Web/Views/Race/Edit.cshtml
@@ -311,7 +311,7 @@
 @await Html.PartialAsync("_competitorCreate", Model)
 
 @section PreFooter {
-    <footer class="footer score-entry" id="scoreButtonFooter" style="display: none;">
+    <footer class="footer mt-auto py-3 score-entry" id="scoreButtonFooter" style="display: none;">
         <div class="container footer-header">
             <div class="row float-right">
                 <button id="closefooter" type="button" class="close" aria-label="Close">
