Added CS Screenshot to home page

--- a/SailScores.Web/Views/Home/Index.cshtml
+++ b/SailScores.Web/Views/Home/Index.cshtml
@@ -25,6 +25,13 @@
                         <img src="/images/TypiqueRaceEntry.png" alt="Results entry" class="d-block w-100">
                     </picture>
                 </div>
+                <div class="carousel-item active">
+                    <picture class="d-block w-100">
+                        <source srcset="images/TypiqueSeriesCS_343.webp 1x, images/TypiqueSeriesCS.webp 2x"
+                                type="image/webp" class="d-block w-100">
+                        <img src="/images/TypiqueSeriesCS.png" alt="Series results" class="d-block w-100">
+                    </picture>
+                </div>
                 <div class="carousel-item">
                     <picture class="d-block w-100">
                         <source srcset="images/TypiqueMainPage_343.webp 1x, images/TypiqueMainPage.webp 2x"
